--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "numpy>=2.3.2",
     "pydub>=0.25.1",
     "rapidfuzz>=3.14.0",
+    "unidecode>=1.4.0",
     "webrtcvad>=2.0.10",
 ]
